Fixed background jumping when modal opens

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -32,6 +32,10 @@ html {
   overflow-y: scroll;
 }
 
+.modal-open {
+  padding-right: 0 !important;
+}
+
 body {
   background: image_url('old_moon.png');
   font-family: 'comfortaabold', sans-serif;
